--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,9 +48,12 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
         minSdkVersion 20
+        multiDexEnabled true
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+
+        manifestPlaceholders.gm_api_key = "$System.env.GM_API_KEY"
     }
 
     buildTypes {
