--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   geolocator: ^9.0.0
   google_maps_flutter: ^2.1.8
-  provider: ^6.0.3
+  firebase_core: ^1.19.1
+  cloud_firestore: ^3.2.1
   get: ^4.6.5
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
